[package]
name = "xi-win"
version = "0.1.1"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
description = "Windows front-end for xi editor."

[dependencies]
directwrite = "0.1.2"
direct2d = "0.1.1"

xi-core-lib = { git = "https://github.com/google/xi-editor" }
xi-rpc = { git = "https://github.com/google/xi-editor" }
serde = "1.0"
serde_json = "1.0"

[dependencies.xi-win-shell]
path = "xi-win-shell"

[dependencies.winapi]
version = "0.3"
features = ["d2d1_1", "dwrite", "winbase", "libloaderapi", "errhandlingapi", "winuser", "shellscalingapi", "shobjidl", "combaseapi", "synchapi"]
